--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = "edgerunn3r.com"
-title   = "Hello Friend NG"
+title   = "edgerunn3r"
 languageCode = "en-us"
 theme = "hello-friend-ng"
 
@@ -37,7 +37,7 @@ disableHugoGeneratorInject = false
   posts = "/posts/:year/:month/:title/"
 
 [author]
-  name = "Jane Doe"
+  name = "EdgeRunn3r"
 
 [blackfriday]
   hrefTargetBlank = true
@@ -122,7 +122,7 @@ disableHugoGeneratorInject = false
     topText = []
     bottomText = [
       "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
-      "Made with &#10084; by <a href=\"https://github.com/rhazdon\">Djordje Atlialp</a>"
+      "Made with &#10084;
     ]
 
   # Colors for favicons
@@ -157,11 +157,11 @@ disableHugoGeneratorInject = false
   #   url = ""
 
   # Uncomment this if you want a portrait on your start page
-  #
-  # [params.portrait]
-  #   path     = "/img/image.jpg"
-  #   alt      = "Portrait"
-  #   maxWidth = "50px"
+  
+   [params.portrait]
+     path     = "/img/image.jpg"
+     alt      = "Portrait"
+     maxWidth = "50px"
 
   # Social icons
   [[params.social]]
