--- a/hugo.toml
+++ b/hugo.toml
@@ -122,7 +122,7 @@ disableHugoGeneratorInject = false
     topText = []
     bottomText = [
       "Powered by <a href=\"http://gohugo.io\">Hugo</a>",
-      "Made with &#10084;
+      "Made with &#10084";
     ]
 
   # Colors for favicons
