added README, allowed command to run in codespace

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://edgerunn3r.com"
+baseURL = "https://edgerunn3r.com/"
 title   = "edgerunn3r"
 languageCode = "en-us"
 theme = "hello-friend-ng"
