--- a/.github/workflows/deploy.disabled.yaml
+++ b/.github/workflows/deploy.disabled.yaml
@@ -30,7 +30,7 @@ jobs:
         run: hugo --minify
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./public
 
