--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://edgerunn3r.com/"
+baseURL = "https://mayed.ae"
 title   = "edgerunn3r"
 languageCode = "en-us"
 theme = "hello-friend-ng"
