--- a/hugo.toml
+++ b/hugo.toml
@@ -114,15 +114,13 @@ disableHugoGeneratorInject = false
   # If you want, you can easily override the default footer with your own content. 
   #
   [params.footer]
-    trademark = 2023
+    trademark = 2025
     rss = true
     copyright = true
     author = true
 
     topText = []
-    bottomText = [
-      "Powered by <a href=\"http://gohugo.io\">Hugo</a>", "Made with &#10084",
-    ]
+    bottomText = []
 
   # Colors for favicons
   #
